rs/demos/proc_macros/darling_example/tests/ui-fail/unknown_key.rs
use darling_example::Config;

#[derive(Config)]
struct UnknownKeyCfg {
    #[config(does_not_exist = true)]
    field: u8,
}

fn main() {}
